fixed that layout issue need to add hover affect

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 25px;
-  min-height: 100vh; /* Minimum height, but can grow */
 }
 
 .card {
@@ -67,6 +66,7 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   font-family: "Poppins", sans-serif;
+  cursor: pointer;
 }
 .add:active {
   background-color: rgba(41, 101, 252, 0.75);
@@ -82,7 +82,8 @@ body {
   font-size: 1.6rem;
   font-weight: 500;
   font-family: "Poppins", sans-serif;
-  transition: all 0.3s ease; /* Smooth transition for all changeable properties */
+  transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .card-unread {
@@ -95,7 +96,8 @@ body {
   font-size: 1.6rem;
   font-weight: 500;
   font-family: "Poppins", sans-serif;
-  transition: all 0.3s ease; /* Smooth transition for all changeable properties */
+  transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .remove {
@@ -108,6 +110,7 @@ body {
   font-size: 1.6rem;
   font-weight: 500;
   font-family: "Poppins", sans-serif;
+  cursor: pointer;
 }
 .remove:active {
   background-color: rgba(248, 39, 39, 0.75);
@@ -247,4 +250,15 @@ header {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.35); /* Semi-transparent black */
   z-index: 1; /* Ensure it's above other content */
+}
+@media screen and (min-width: 456px) {
+  .book-card {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+  .card {
+    width: auto;
+  }
 }
